@@ -18,6 +18,15 @@ git-annex (5.20140118) UNRELEASED; urgency=medium
     preferred content expressions.
   * Client, transfer, incremental backup, and archive repositories
     now want to get content that does not yet have enough copies.
+  * Client, transfer, and source repositories now do not want to retain
+    unused file contents.
+  * assistant: Checks daily for unused file contents, and when possible
+    moves them to a repository (such as a backup repository) that
+    wants to retain them.
+  * assistant: annex.expireunused can be configured to cause unused
+    file contents to be deleted after some period of time.
+  * webapp: Nudge user to see if they want to expire old unused file
+    contents when a lot of them seem to be piling up in the repository.
   * repair: Check git version at run time.
   * assistant: Run the periodic git gc in batch mode.
 
